[package]
name = "iproute2-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iproute2-rs"
path = "src/main.rs"

[lib]
name = "iproute2_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_derive = "1.0.123"
serde_json = "1.0"
netlink-packet-route = "0.11.0"
netlink-proto = "0.9.2"
rtnetlink = "0.9.1"
enum_dispatch = "0.3.8"
futures = "0.3.10"
tokio = {version = "1.4", features = ["full"]}
nix = "0.23.1"
uuid = { version = "0.8", features = ["serde", "v4"] }